--- a/examples/full/Cargo.toml
+++ b/examples/full/Cargo.toml
@@ -39,8 +39,4 @@ crc32fast = "1.3.2"
 hex-literal = "0.4.1"
 
 [features]
-postgres = []
-selfservice = []
-eoa-auth = []
-admin-auth = []
-default = ["postgres", "selfservice", "eoa-auth", "admin-auth"]
+default = []
