--- a/examples/full/Cargo.toml
+++ b/examples/full/Cargo.toml
@@ -14,6 +14,7 @@ ethers-core = { version = "2.0.11", features = ["eip712"] }
 hex = "0.4.3"
 serde = "1.0.193"
 serde_json = "1.0.108"
+subxt = "0.37.0"
 thiserror = "1.0.50"
 tokio = {version = "1", features = ["full"]}
 tokio-postgres = "0.7.10"
