--- a/examples/full/.env.example
+++ b/examples/full/.env.example
@@ -1,5 +1,3 @@
 PRIVATE_KEY=1234567890...
 PORT=3000
-POSTGRES_HOST=
-POSTGRES_USER=
-POSTGRES_PASSWORD=
+SUPPORTED_TLD_PATH="./supported-tlds.json"
